flux/cluster/apps/presidential-paradise/wooloofanclub/wooloo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wooloofan-club
  namespace: presidential-paradise
  labels:
    app: wooloofan-club
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wooloofan-club
  template:
    metadata:
      labels:
        app: wooloofan-club
    spec:
      containers:
        - name: wooloofan-club
          image: 0x76/wooloofan.club
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wooloofan-club-whoami
  namespace: presidential-paradise
  labels:
    app: wooloofan-club-whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wooloofan-club-whoami
  template:
    metadata:
      labels:
        app: wooloofan-club-whoami
    spec:
      containers:
        - name: wooloofan-club-whoami
          image: containous/whoami
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: wooloofan-club-service
  namespace: presidential-paradise
spec:
  selector:
    app: wooloofan-club
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: wooloofan-club-whoami-service
  namespace: presidential-paradise
spec:
  selector:
    app: wooloofan-club-whoami
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wooloofan-club-ingress
  namespace: presidential-paradise
spec:
  ingressClassName: "traefik"
  rules:
    - host: "wooloofan.club"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wooloofan-club-service
                port:
                  number: 80
    - host: "whoami.wooloofan.club"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wooloofan-club-whoami-service
                port:
                  number: 80
